update ide settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,15 @@
   "python.terminal.activateEnvironment": true,
   "[python]": { "editor.defaultFormatter": "ms-python.black-formatter" },
   "[markdown]": { "editor.defaultFormatter": "esbenp.prettier-vscode", "editor.tabSize": 3 },
+  "prettier.requireConfig": false,
+  "prettier.useEditorConfig": true,
+  "prettier.embeddedLanguageFormatting": "auto",
+  "prettier.bracketSameLine": false,
+  "prettier.endOfLine": "lf",
   "prettier.jsxSingleQuote": false,
-  "prettier.singleQuote": false,
   "prettier.printWidth": 200,
+  "prettier.semi": true,
+  "prettier.singleQuote": false,
   "prettier.tabWidth": 2,
   "prettier.trailingComma": "all",
   "prettier.useTabs": false
